--- a/Math_teaching_templates/algebra-balance-final option 4.html
+++ b/Math_teaching_templates/algebra-balance-final option 4.html
@@ -2520,6 +2520,11 @@
             currentXP += amount;
             document.getElementById('xp-value').textContent = currentXP;
             
+            // Send XP to the global lesson integration system if available
+            if (window.LessonXP && window.LessonXP.earnXP) {
+                window.LessonXP.earnXP(amount);
+            }
+            
             // Add pulse animation
             const xpDisplay = document.getElementById('xp-display');
             xpDisplay.classList.add('pulse');
